[package]
name = "rmesh"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A parser for the rmesh extension"
homepage = "https://github.com/DotWith/rmesh/"
documentation = "https://docs.rs/rmesh"
repository = "https://github.com/DotWith/rmesh/"
readme = "README.md"

[dependencies]
thiserror = "1.0.38"
byteorder = "1.4.3"

[[example]]
name = "parse"
path = "examples/parse.rs"
