[package]
name = "rmesh"
version = "0.3.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A parser for the rmesh extension"
homepage = "https://github.com/scpcbredux/rmesh/"
documentation = "https://docs.rs/rmesh"
repository = "https://github.com/scpcbredux/rmesh/"
readme = "../README.md"

[dependencies]
thiserror = "1.0.51"
binrw = "0.13.3"

[[example]]
name = "read"
path = "examples/read.rs"

[[example]]
name = "write"
path = "examples/write.rs"
